Syndicati - Core & Features Updates
Changelog:

-UI Enhancements
-Messaging Enhancements & Stocket Performance Refinements
-Database Restructure & Data Pulling Enhancements
-Performance & Optimizations Improvements